<resources>
    <string name="app_name">Space Stations Info</string>
    <!--Menu-->
    <string name="dayPicture">Imagen del día</string>
    <string name="spaceStations">Estaciones espaciales</string>
    <string name="spaceStationDistance">Distancia ISS</string>
    <string name="btn_logut">Logout</string>
    <string name="dayPictNoInternet">No se puede mostrar la imagen al no haber acceso a Internet</string>
    <!--Login-->
    <string name="name_app">Estaciones Espaciales App</string>
    <string name="mail">Email</string>
    <string name="password">Contraseña</string>
    <string name="username">Email</string>
    <string name="save_user">Recordar usuario</string>
    <string name="login">Iniciar Sesión</string>
    <string name="register">Registrar</string>
    <string name="login_msg">El usuario y la contraseña no son válidos.</string>
    <!--Registro-->
    <string name="register_txt">Bienvenido!</string>
    <string name="register_mail">Email</string>
    <string name="register_pass_1">Contraseña</string>
    <string name="register_pass_2">Repita contraseña</string>
    <string name="register_button">Registrarse</string>
    <string name="register_msg">La contraseña debe tener mínimo 6 caracteres.</string>
    <!--Listado estaciones-->
    <string name="cardImg">Imagen</string>
    <string name="cardName">Nombre</string>
    <string name="cardStatus">Estado</string>
    <string name="cardFounded">Activa desde</string>
    <!--Estación-->
    <string name="station_img">Imagen</string>
    <string name="station_btn_share">Compartir</string>
    <string name="station_btn_share_img">Compartir imagen</string>
    <string name="station_name">Nombre</string>
    <string name="station_founded">Fundada</string>
    <string name="station_deorbited">Sacada de órbita</string>
    <string name="station_orbit">Órbita</string>
    <string name="station_description">Descripción</string>
    <!--Imagen del dia-->
    <string name="pict_date">Fecha</string>
    <string name="pict_explanation">Descripción</string>
    <string name="pict_title">Título</string>
    <string name="pict_day_share_img">Compartir imagen</string>
    <string name="pict_day_share">Compartir</string>
    <string name="pict_day_btn">Menu</string>
    <!--Localizacion-->
    <string name="location_device_msg">Tu posición</string>
    <string name="location_device_country">País: </string>
    <string name="location_device_nearest_place">Ciudad cercana: </string>
    <string name="location_device_url">Mapa: </string>
    <string name="location_iss_msg">Posición de la ISS</string>
    <string name="location_iss_lat">Latitud: </string>
    <string name="location_iss_long">Longitud: </string>
    <string name="location_iss_time">TimeStamp: </string>
    <string name="location_distance_msg">Distancia</string>
    <string name="location_distance_res">Valor</string>
    <!--Notificaciones-->
    <string name="notification_title">¡Hay una nueva imagen del día!</string>
    <string name="notification_msg">Pulse aquí para ver una nueva imagen del día de la NASA.</string>

</resources>