<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">
    <androidx.cardview.widget.CardView android:id="@+id/card_view" android:layout_gravity="center" android:layout_width="match_parent" android:layout_marginHorizontal="4dp" android:layout_marginVertical="2dp" android:layout_height="120dp" app:cardCornerRadius="8dp" app:cardElevation="10dp">

        <ImageView
            android:id="@+id/card_img"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/cardImg"
            android:scaleType="centerCrop"
            app:srcCompat="@android:drawable/ic_menu_camera" />
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:background="#99FFFFFF" android:layout_gravity="bottom|fill_horizontal" android:orientation="vertical">

            <TextView
                android:id="@+id/card_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/cardName"
                android:text="@string/cardName"
                android:textAlignment="textStart"
                android:textAllCaps="true"
                android:textColor="@color/cardview_dark_background"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/card_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25dp"
                android:text="@string/cardStatus"
                android:textAlignment="center"
                android:textColor="@color/cardview_dark_background"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/cardFounded"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="1dp"
                android:text="@string/cardFounded"
                android:textAlignment="center"
                android:textColor="@color/cardview_dark_background" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>